[project]
name = "z-image-utilities"
description = "Collection of utility nodes for ComfyUI designed specifically for the Z-Image model with vision model support and LLM-powered prompt enhancement."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Core dependencies for direct model loading", "transformers>=4.30.0", "accelerate>=0.20.0", "bitsandbytes>=0.41.0", "huggingface-hub>=0.16.0", "# Note: These are required for the 'Direct' provider option.", "# 'torch' is excluded as it should be provided by the ComfyUI environment."]

[project.urls]
Repository = "https://github.com/Koko-boya/Comfyui-Z-Image-Utilities"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Koko-boya/Comfyui-Z-Image-Utilities/wiki"
"Bug Tracker" = "https://github.com/Koko-boya/Comfyui-Z-Image-Utilities/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui-Z-Image-Utilities"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

